--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     compile('com.amazonaws:aws-android-sdk-core:2.2.8')
     compile('com.amazonaws:aws-android-sdk-cognito:2.2.8')
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.android.gms:play-services:8.3.0'
 }
